--- a/css/main.css
+++ b/css/main.css
@@ -857,6 +857,20 @@ textarea {
     }
   }
 
+  ul.productos li{
+    height: 27em;
+  }
+
+  ul.productos p.nombre-p{
+    text-transform: uppercase;
+    font-size: 1.5em;
+  }
+
+  ul.productos img.icono-categoria{
+    width: 40px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+  }
 
   /* Footer */
 
