--- a/css/main.css
+++ b/css/main.css
@@ -437,7 +437,7 @@ textarea {
 
   .boton {
     background-color: var(--color_primario);
-    padding: 10px 40px;
+    padding: 10px 30px;
     margin-top: 10px;
     display: inline-block;
     text-transform: uppercase;
@@ -849,11 +849,25 @@ textarea {
 
   }
 
+  ul.productos img.img-producto{
+    max-width: 60%;
+  }
+
   @media only screen and (min-width: 480px){
     .f-buscar select, .buscar{
       margin-right: 10px;
       margin-top: 0;
       width: 43%;
+    }
+
+    ul.productos img.img-producto{
+      max-width: 30%;
+    }
+  }
+
+  @media only screen and (min-width: 768px){
+    ul.productos img.img-producto{
+      max-width: 100%;
     }
   }
 
